--- a/yogurt/src/styles.css
+++ b/yogurt/src/styles.css
@@ -15,6 +15,7 @@ body {
     overflow: hidden;
     background: linear-gradient(-45deg, #431ffa, #d8cff9, #f8c7c7, #fa1f1f);
     font-family: 'Clash Display', sans-serif;
+    z-index: -1;
 
 }
 
